syntax = "proto3";

package pb;

option go_package = "./";

import "google/protobuf/timestamp.proto";

service AdminService {
    rpc AdminLoginRequest(AdminLogin) returns(AdminResponse);

    rpc AdminBlockUser(userID) returns(AdminResponse);
    rpc AdminUnBlockUser(userID) returns(AdminResponse);
    rpc AdminGetAllUsers(AdNoParam) returns(AdUserList);
    rpc AdminFindUserByID(AdID) returns(AdUserProfile);
}

message AdID{
    string ID = 1;
}

message AdminLogin {
    string Email = 1;
    string Password = 2;
}

message AdminResponse {
    enum Status {
        OK = 0;
        ERROR = 1;
    }

    Status status = 1;
    string message = 2;
    oneof payload {
        string error = 3;
        string data = 4;
    }
}

message userID {
    string ID = 1;
}

message AdUserProfile {
    string User_ID = 1;
    string User_Name = 2;
    string Email = 3; 
    string Phone = 4;
    bool is_Prime_Member = 5;
    bool Is_Blocked = 6;
    google.protobuf.Timestamp membership_Expiry_Date = 7;
}

message AdNoParam {}

message AdUserList {
    repeated AdUserProfile users = 1;
}